--- a/MemorySpil/MainWindow.xaml
+++ b/MemorySpil/MainWindow.xaml
@@ -41,7 +41,22 @@
 
             <Border Grid.Column="1" CornerRadius="10" Background="#3A3D42" Opacity="100">
                 <StackPanel Margin="5">
+                    <TextBlock Text="Memory Game" FontSize="24" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" Margin="0,10,0,20"/>
+
+                    <!--Player Name:-->
+                    <TextBlock Text="Player Name" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="0,0,0,0"/>
+                    <TextBox Name="PlayerNameTextBox" Width="200" Height="25" Margin="0,0,0,10" HorizontalAlignment="Center" TextChanged="PlayerNameTextBox_TextChanged"/>
                     
+                    <!--Timer-->
+                    <TextBlock Text="Timer" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="0,10,0,0"/>
+                    <TextBlock Text="0" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="0,0,0,0"/>
+                    
+                    <!--Moves-->
+                    <TextBlock Text="Moves" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="0,10,0,0"/>
+                    <TextBlock Text="0" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="0,0,0,0"/>
+
+                    <!--New Game-->
+                    <Button Name="NewGameBtn" Content="New Game" Width="200" Height="30" Margin="0,190,0,10" HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="NewGameBtn_Click"/>
                 </StackPanel>
             </Border>
         </Grid>
