--- a/MemorySpil/MainWindow.xaml
+++ b/MemorySpil/MainWindow.xaml
@@ -55,8 +55,13 @@
                     <TextBlock Text="Moves" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="0,10,0,0"/>
                     <TextBlock Text="0" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="0,0,0,0"/>
 
+                    <!--Save Game-->
+                    <Button Name="SaveGameBtn" Content="Save Game" Width="180" Height="30" Margin="0,160,0,10" HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="NewGameBtn_Click"
+                            Command="{Binding Knap2}"/>
+
                     <!--New Game-->
-                    <Button Name="NewGameBtn" Content="New Game" Width="200" Height="30" Margin="0,190,0,10" HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="NewGameBtn_Click"/>
+                    <Button Name="NewGameBtn" Content="New Game" Width="180" Height="30" Margin="0,-5,0,10" HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="NewGameBtn_Click"
+                            Command="{Binding Knap}"/>
                 </StackPanel>
             </Border>
         </Grid>
